Added tests in class

--- a/BuzzGenerator/BuzzGenerator1/BuzzGenerator1/BuzzGenerator1.csproj
+++ b/BuzzGenerator/BuzzGenerator1/BuzzGenerator1/BuzzGenerator1.csproj
@@ -55,6 +55,12 @@
     <Reference Include="TweetSharp">
       <HintPath>..\..\..\TDD\Class0309\ConsoleApplication2\packages\TweetSharp.2.3.0\lib\4.0\TweetSharp.dll</HintPath>
     </Reference>
+    <Reference Include="xunit">
+      <HintPath>..\packages\xunit.1.9.1\lib\net20\xunit.dll</HintPath>
+    </Reference>
+    <Reference Include="xunit.extensions">
+      <HintPath>..\packages\xunit.extensions.1.9.1\lib\net20\xunit.extensions.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MyTwitter.cs" />
